improving logic of frontend and backend