@@ -14,10 +14,12 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,18 +37,43 @@ public class VoucherServiceImpl implements VoucherService {
     }
 
     @Override
+    @Transactional
     public VoucherDTO order(String id, String userId) {
-        var voucherToOrder = this.voucherRepository.findById(UUID.fromString(id)).orElseThrow(() -> new IllegalArgumentException("No voucher found with such an id"));
-        if (voucherToOrder.getUser() != null) {
-            throw new IllegalStateException("Voucher is already assigned to another user");
-        }
-        var user = this.userRepository.findById(UUID.fromString(userId)).orElseThrow(() -> new UsernameNotFoundException("No user found with such an username"));
-        voucherToOrder.setUser(user);
-        user.getVouchers().add(voucherToOrder);
+        Voucher voucherToOrder = voucherRepository.findById(UUID.fromString(id)).orElseThrow(/*...*/);
+        User user = userRepository.findById(UUID.fromString(userId)).orElseThrow(/*...*/);
 
-        voucherRepository.save(voucherToOrder);
+        BigDecimal price = BigDecimal.valueOf(voucherToOrder.getPrice());
+        if (user.getBalance().compareTo(price) < 0) {
+            throw new IllegalStateException("Insufficient funds to order this tour.");
+        }
+        user.setBalance(user.getBalance().subtract(price));
+
+        voucherToOrder.setUser(user);
+        voucherToOrder.setStatus(VoucherStatus.REGISTERED);
+
         userRepository.save(user);
-        return voucherMapper.toVoucherDTO(voucherToOrder);
+        return voucherMapper.toVoucherDTO(voucherRepository.save(voucherToOrder));
+    }
+
+
+    @Override
+    @Transactional
+    public void cancelOrder(String voucherId, String username) {
+        Voucher voucher = voucherRepository.findById(UUID.fromString(voucherId)).orElseThrow(/*...*/);
+        User user = userRepository.findUserByUsername(username).orElseThrow(/*...*/);
+
+        if (voucher.getUser() == null || !voucher.getUser().getId().equals(user.getId())) {
+            throw new SecurityException("User is not the owner of this voucher.");
+        }
+
+        BigDecimal price = BigDecimal.valueOf(voucher.getPrice());
+        user.setBalance(user.getBalance().add(price));
+
+        voucher.setUser(null);
+        voucher.setStatus(VoucherStatus.CANCELED);
+
+        userRepository.save(user);
+        voucherRepository.save(voucher);
     }
 
     @Override
@@ -160,22 +187,45 @@ public class VoucherServiceImpl implements VoucherService {
 
     @Override
     public List<VoucherDTO> findAllByParameters(Pageable pageable, VoucherSearchParameters parameters) {
-        Specification<Voucher> spec = Specification
-                .where(VoucherSpecifications.hasHotelType(parameters.hotelType()))
-                .and(VoucherSpecifications.hasTourType(parameters.tourType()))
-                .and(VoucherSpecifications.hasTransferType(parameters.transferType()))
-                .and(VoucherSpecifications.hasPriceGreaterThanOrEqual(BigDecimal.valueOf(Double.parseDouble(parameters.priceMin()))))
-                .and(VoucherSpecifications.hasPriceLessThanOrEqual(BigDecimal.valueOf(Double.parseDouble(parameters.priceMax()))));
+        Specification<Voucher> spec = Specification.where(null);
+
+        if (parameters.hotelType() != null && !parameters.hotelType().isEmpty()) {
+            spec = spec.and(VoucherSpecifications.hasHotelType(parameters.hotelType()));
+        }
+        if (parameters.tourType() != null && !parameters.tourType().isEmpty()) {
+            spec = spec.and(VoucherSpecifications.hasTourType(parameters.tourType()));
+        }
+        if (parameters.transferType() != null && !parameters.transferType().isEmpty()) {
+            spec = spec.and(VoucherSpecifications.hasTransferType(parameters.transferType()));
+        }
+
+        if (parameters.priceMin() != null && !parameters.priceMin().isEmpty()) {
+            try {
+                BigDecimal priceMin = BigDecimal.valueOf(Double.parseDouble(parameters.priceMin()));
+                spec = spec.and(VoucherSpecifications.hasPriceGreaterThanOrEqual(priceMin));
+            } catch (NumberFormatException e) {
+            }
+        }
+
+        if (parameters.priceMax() != null && !parameters.priceMax().isEmpty()) {
+            try {
+                BigDecimal priceMax = BigDecimal.valueOf(Double.parseDouble(parameters.priceMax()));
+                spec = spec.and(VoucherSpecifications.hasPriceLessThanOrEqual(priceMax));
+            } catch (NumberFormatException e) {
+            }
+        }
 
         Pageable sortedPageable = PageRequest.of(
                 pageable.getPageNumber(),
                 pageable.getPageSize(),
-                Sort.by(Sort.Direction.DESC, "isHot")
+                Sort.by(Sort.Direction.DESC, "isHot") // Сортування за "гарячими" турами
         );
 
         return voucherRepository.findAll(spec, sortedPageable)
                 .getContent()
-                .stream().map(voucherMapper::toVoucherDTO).toList();
+                .stream()
+                .map(voucherMapper::toVoucherDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
